--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -22,26 +22,27 @@
     <section class="login-form">
         <div class="row justify-content-center">
             <div class="login-box col-lg-4 col-md-6 col-sm-12">
-
                 <h2 class="instaname text-center">Instagram</h2>
+                {% if form.errors %}
+                <div class="alert alert-danger" role="alert">
+                    Wrong username or Password
+                  </div>
+                {% endif %}
+                <form action="{% url 'login' %}" method="post">
 
-                <p class="text-center" style="font-size: large; font-weight: bold;">Sign up to see photos and videos of
-                    your friends.
-                </p>
-
-                <form method="post">
-
-                    {{ user_form.as_p }}
+                    {{ form.as_p }}
                     {% csrf_token %}
-
-                    <p><input type="submit" value="sign Up"></p>
+                    <input type="hidden" name="next" value="{{ next }}" />  
+                    <p><input type="submit" value="log in"></p>
                 </form>
+
                 <div class="signup">
-                    <p class="no-account"> Have an account ? <a href="" class="signup-link"> Signin </a> </p>
+                    <p class="no-account"> Don't have account ? <a href="{%url 'register' %} " class="signup-link"> Signup </a> </p>
                 </div>
 
-
             </div>
+        </div>
+
 
 
 
@@ -51,14 +52,14 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 
