--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -31,7 +31,7 @@
 
       const csrftoken = getCookie('csrftoken');
     </script>
-    <title>Document</title>
+    <title>Adams_instagram-clone</title>
 </head>
 <body>
     {% include "navbar.html" %}
