--- a/clone/static/css/login.css
+++ b/clone/static/css/login.css
@@ -87,7 +87,7 @@ a.button {
     margin: 0;
     margin-top: 5%;
     margin-left: 8%;
-    background-color: #FFFFFF;
+    background-color: #0a0a0a;
     border: 1px solid #DBDBDB;
     width: 80%;
     height: 12%;
