added html files

--- a/clone/templates/account/dashboard.html
+++ b/clone/templates/account/dashboard.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adams~instagramclone</title>
     {% block styles %}
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/dashboardd.css' %}">
