--- a/clone/templates/account/edit.html
+++ b/clone/templates/account/edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/editt.css' %}">
     {% endblock %}
     <title>Adams~instagramclone</title>
 </head>
@@ -19,22 +19,20 @@
 <body>
 
     {% block content %}
+    
     <section class="login-form">
         <div class="row justify-content-center">
             <div class="login-box col-lg-4 col-md-6 col-sm-12">
-
-                <h2 class="instaname text-center">Instagramclone</h2>
+                <h2 class="instaname text-center">Edit profile</h2>
  
-                <form  method="post">
+                <form  method="post" action="{% url 'edit' %}" enctype="multipart/form-data">
 
                     {{ user_form.as_p }}
+                    {{ profile_form.as_p }}
                     {% csrf_token %}
                    
-                    <p><input type="submit" value="sign Up"></p>
+                    <p><input type="submit" value="Save"></p>
                 </form>
-                <div class="signup">
-                    <p class="no-account"> Have  an account ? <a href="{%url 'login' %} " class="signup-link"> Login </a> </p>
-                </div>
 
             </div>
         </div>
