added a html.html

--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -31,11 +31,11 @@
 
       const csrftoken = getCookie('csrftoken');
     </script>
-    <title>Adams_instagram-clone</title>
+    <title>Adams~instagramclone</title>
 </head>
 <body>
+    
     {% include "navbar.html" %}
-
 
         {% if messages %}
         <div class="container">
