--- a/clone/templates/navbar.html
+++ b/clone/templates/navbar.html
@@ -1,47 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
-
-<nav class="navbar navbar-dark transparent justify-content-between" style="background-color: rgb(216, 139, 139); height: 100%;">
-    <a class="navbar-brand" href="{% url 'dashboard' %}" style="color: white; font-size: 35px; font-style: italic; text-align: center;" href="/">Instagram~~clone</a>
+<nav class="navbar navbar-dark transparent justify-content-between" style="background-color: #eeadad; height: 100%;">
+      <a class="navbar-brand" style="color: rgb(15, 14, 14); font-size: 35px; font-style: italic;  text-align: center;" href="">Instagramclone</a>
     {% if request.user.is_authenticated %}
-    <form class="form-inline my-2 my-lg-0" action="" method="get">
-        <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search User" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0" action="" method="get"></form>
+      <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search User" aria-label="Search">
     </form>
-    <ul class="navbar-nav mr-auto nav-right-items ">
-        <li class="nav-item dropdown">
+          <ul class="navbar-nav mr-auto nav-right-items ">
+                    <li class="nav-item dropdown">
 
-            <a class="nav-link dropdown-toggle " href="#" href="#" id="navbarDropdown" role="button"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{request.user.username}} <i class="fas fa-user nav-icons"></i>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="">Profile</a>
-                <a class="dropdown-item" href="">Logout</a>
-        </li>
-        </li>
+                        <a class="nav-link dropdown-toggle " href="#" href="#" id="navbarDropdown" style="color: black;" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{request.user.username}} <i class="fas fa-user nav-icons" style="color: black;"></i>
+                         </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="">Profile</a>
+                          <a class="dropdown-item" href="">Logout</a>
+                      </li>
+                  </li>
 
-        <li class="nav-item">
+                  <li class="nav-item">
 
-            <a class="nav-link" href="" role="button">
-                <i class="fas fa-plus nav-icons"></i>
-            </a>
+                    <a class="nav-link" href=""  role="button">
+                     <i class="fas fa-plus nav-icons"></i>
+                     </a>
 
-        </li>
+                    </li>
 
-        {% endif %}
+                      {% endif %}
 
 
-    </ul>
+          </ul> 
 </nav>
-</body>
-
-</html>
