--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -22,7 +22,7 @@
     <section class="login-form">
         <div class="row justify-content-center">
             <div class="login-box col-lg-4 col-md-6 col-sm-12">
-                <h2 class="instaname text-center">Instagram</h2>
+                <h2 class="instaname text-center">Instagramclone</h2>
                 {% if form.errors %}
                 <div class="alert alert-danger" role="alert">
                     Wrong username or Password
