--- a/clone/static/css/login.css
+++ b/clone/static/css/login.css
@@ -87,8 +87,8 @@ a.button {
     margin: 0;
     margin-top: 5%;
     margin-left: 8%;
-    background-color: #0a0a0a;
-    border: 1px solid #DBDBDB;
+    background-color: #181717;
+    border: 1px solid #0e0c0c;
     width: 80%;
     height: 12%;
 }
