--- a/clone/templates/account/dashboard.html
+++ b/clone/templates/account/dashboard.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adams~instagramclone</title>
+    <title>Document</title>
     {% block styles %}
     {{block.super}}
     <link rel="stylesheet" href="{% static 'css/dashboardd.css' %}">
@@ -25,7 +25,7 @@
                         <h10 class=" card-content">
                         <img src="#" height="30" class="round" alt="">  
                         <a href="profile/{{post.profile.user.username}}"><strong> {{post.profile.user.username}}</strong></a> </h10>
-                        <p class="paid-text card-content" > paid partnership with Moringa <br> Nairobi, Kenya</p>
+                        <p class="paid-text card-content" ></p>
                         
                         <img src="{{post.image.url}}" height="500" class="card-img-top card-image" alt="...">
                 
