--- a/clone/templates/account/edit.html
+++ b/clone/templates/account/edit.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/editt.css' %}">
     {% endblock %}
-    <title>Adams~instagramclone</title>
+    <title>Document</title>
 </head>
 
 <body>
