--- a/clone/templates/account/login.html
+++ b/clone/templates/account/login.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
-    <title>Adams~instagramclone</title>
+    <title>Adam~~insagram</title>
 </head>
 
 <body>
