--- a/clone/templates/account/post.html
+++ b/clone/templates/account/post.html
@@ -1,53 +1,55 @@
 {% extends 'base.html' %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adams~instagramclone</title>
+    <link rel="stylesheet" href="{% static 'css/post.css' %}">
+
 </head>
 
 <body>
 
     {% block content %}
     <br><br>
-    <section class="login-form">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="login-box col-lg-4 col-md-6 col-sm-12">
-                    
-     
-                    <form  method="post" action="{% url 'create' %}" enctype="multipart/form-data">
-    
-                        {{ image_form.as_p }}
-                        {% csrf_token %}
-                       
-                        <p><input type="submit" value="POST"></p>
-                    </form>
-    
+    <div class="post-box">
+        <div class="login-form">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="login-box col-lg-4 col-md-6 col-sm-12">
+
+
+                        <form method="post" action="{% url 'create' %}" enctype="multipart/form-data">
+
+                            {{ image_form.as_p }}
+                            {% csrf_token %}
+
+                            <p><input type="submit" value="POST"></p>
+                        </form>
+
+                    </div>
                 </div>
             </div>
-        </div>
+
+    </div>
 
 
-
-
-    </section>
+</div>
     {% endblock %}
 
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 
 </body>
 
