--- a/clone/templates/account/register.html
+++ b/clone/templates/account/register.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     {% endblock %}
-    <title>Adams~instagramclone</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                     <p><input type="submit" value="sign Up"></p>
                 </form>
                 <div class="signup">
-                    <p class="no-account"> Have  an account ? <a href="{%url 'login' %} " class="signup-link"> Login </a> </p>
+                    <p class="no-account"> Have  an account ? <a href="{%url 'login' %} " class="signup-link"> Signin </a> </p>
                 </div>
 
             </div>
