--- a/clone/templates/base.html
+++ b/clone/templates/base.html
@@ -31,12 +31,10 @@
 
       const csrftoken = getCookie('csrftoken');
     </script>
-    <title>Adams~instagramclone</title>
+    <title>Adaninstagramclone</title>
 </head>
 <body>
-    
     {% include "navbar.html" %}
-
         {% if messages %}
         <div class="container">
             <ul class="messages">
