--- a/clone/templates/account/searches.html
+++ b/clone/templates/account/searches.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adams~instagramclone</title>
+    <title>Document</title>
 </head>
 <body>
     {% block content %}
