--- a/clone/templates/account/login.html
+++ b/clone/templates/account/login.html
@@ -18,7 +18,7 @@
     <section class="login-form">
         <div class="row justify-content-center">
             <div class="login-box col-lg-4 col-md-6 col-sm-12">
-                <h2 class="instaname text-center">Insta-Clone</h2>
+                <h2 class="instaname text-center">InstagramClone</h2>
 
                 <form method="post">
 
