--- a/clone/templates/account/register.html
+++ b/clone/templates/account/register.html
@@ -33,7 +33,7 @@
                     <p><input type="submit" value="sign Up"></p>
                 </form>
                 <div class="signup">
-                    <p class="no-account"> Have  an account ? <a href="{%url 'login' %} " class="signup-link"> Signin </a> </p>
+                    <p class="no-account"> Have  an account ? <a href="{%url 'login' %} " class="signup-link"> Login </a> </p>
                 </div>
 
             </div>
