--- a/clone/templates/registration/login.html
+++ b/clone/templates/registration/login.html
@@ -37,7 +37,7 @@
                 </form>
 
                 <div class="signup">
-                    <p class="no-account" style="color: blanchedalmond;"> Don't have account ? <a href="{%url 'register' %} " class="signup-link"> login </a> </p>
+                    <p class="no-account" style="color: blanchedalmond;"> Don't have account ? <a href="{%url 'register' %} " class="signup-link"> signup </a> </p>
                 </div>
 
             </div>
